# fast_login_db

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  database.py  limits.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  validation.py
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.vue  auth_forms.css  main.js  shared_styles.css
frontend/src/components/: LoginComponent.vue  RegisterComponent.vue
